openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: web
  type: ClusterIP
  selector:
    app.kubernetes.io/name: actual
