openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: actual
spec:
  tls:
    termination: edge
  port:
    targetPort: web
  to:
    kind: Service
    name: actual
